Version 4.0:

* Fix disappearing configs when base_dir is specified with a trailing slash.
* Support ~/ when  overriding base_dir in config file + create dir if needed.
* Joystick devices har hotpluggable in the Launcher (without refresh button).
* Controller configuration is rewritten to work with hotpluggable devices.
* Controller configuration now creates SDL2 comptabible mappings.
* SDL_GameControllerDB is now bundled for more out-of-the-box support.
* Support for ARM64 plugins.
* macOS: Fix centering issue when starting FS-UAE on hi-dpi displays.
* macOS: Build script support for macOS M1/ARM64 builds.

* Make sure initial window position is not stored as 0, 0.
* Allow overriding kickstart ROM file again.
* Ask to "upgrade" (install) FS-UAE / QEMU-UAE / CAPSImg if not installed.
* Start/redirect to newer Launcher, if it exists, from plugin dir.
* Remember splitter position also when collapsed.

* Remember splitter position + menu entry to restore default size.
* Splitters to choose config list and screenshots panel size.
* Remember window position, size and maximization state.
* Code refactoring, adding type hints to code (work in progress).
* User interface got a facelift (work in progress).

Version 3.1.0dev:

* Better support for high-DPI displays.
* Basic support for Amiga CD entries for non-CDTV/CD32 platforms.
* File scanner can in some cases deduce SHA-1 from file name (faster).

Version 3.0.0:

* Fixes a problem when launching WHDLoad archived games with OpenRetro
  database enabled and with a matching orhaned variant in the database.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:

* Fixed recently introduced bug when downloading files via cache.

Version 2.9.11dev:

* Plugins can provide files for offline use (WHDLoad, JST, SKick, etc).
* Use newer version of uae-configuration, OSEmu.400.
* Added support for .xz-compressed files.
* GUI options to toggle game mode / governor warning on Linux.

Version 2.9.10dev:
